Fix welcome/index view to generate correct links

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,6 +2,6 @@
 
 %p The verse should show in here: {{verse}}
 
-= button_to 'New Verse'{"ng-model" = "fetchVerse"}
+%button{"ng-model" => "bla"} New Verse
 
-= link_to "add new verse", new_api_verse_path
+= link_to "add new verse", new_verse_path
