Add angular-ui-router in project and prepare views for angular app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="verseApp">
+<html ng-app="thePoetApp">
 <head>
   <title>Yourownpoet</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
