--- a/app/views/questionnaire/welcome.html.haml
+++ b/app/views/questionnaire/welcome.html.haml
@@ -1,10 +1,3 @@
 %h1 Welcome to the poet
 
-%form{"ng-submit" => "receiver_name()"}
-  %fieldset
-    %h2 Who do you want me to write the poem for?
-    %ol  
-      %li
-        %label{:for => "name"} Receiver name:
-        %input{:type => "text", :name => "receiver_name", :class => "text", "ng-model" => "questionnaire.receiver_name" }
-    %input{:type => "submit", :value => "Next", :class => "button"}
+%div{"ui-view" => ""}
