created javascript questionnaire app skeleton updated api routes, controller and views accordingly (uses simple text inputs for themoment) added angular ui-router library

--- a/app/views/questionnaire/message.html.haml
+++ b/app/views/questionnaire/message.html.haml
@@ -1,2 +1,7 @@
-%h1 Questionnaire#message
-%p Find me in app/views/questionnaire/message.html.haml
+/ questionnaire/message.html.haml
+
+.form-group
+  %label{for: "message"} Message
+  %input.form-control{message: "message", "ng-model" => "formData.message", type: "text"}
+
+%button.btn{type: "submit"} Submit
