--- a/app/views/questionnaire/location.html.haml
+++ b/app/views/questionnaire/location.html.haml
@@ -1,2 +1,9 @@
-%h1 Questionnaire#location
-%p Find me in app/views/questionnaire/location.html.haml
+/ questionnaire/location.html.haml
+
+.form-group
+  %label{for: "location"} Location
+  %input.form-control{location: "location", "ng-model" => "formData.location", type: "text"}
+
+.form-group
+  %a.btn{"ui-sref" => "questionnaire.relationship"}
+    Next
