--- a/app/views/questionnaire/receiver_name.html.haml
+++ b/app/views/questionnaire/receiver_name.html.haml
@@ -1,2 +1,9 @@
-%h1 Questionnaire#receiver_name
-%p Find me in app/views/questionnaire/receiver_name.html.haml
+/ questionnaire/receiver_name.html.haml
+
+.form-group
+  %label{for: "receiver_name"} Receiver Name
+  %input.form-control{receiver_name: "reicever_name", "ng-model" => "formData.receiver_name", type: "text"}
+
+.form-group
+  %a.btn{"ui-sref" => "questionnaire.location"}
+    Next
