Added new Questionnaire api controller with corresponding empty spec files Updated routes and views to use new ui-bootstrap typeahead library
updated .gitignore to ignore .backup files

--- a/app/views/questionnaire/location.html.haml
+++ b/app/views/questionnaire/location.html.haml
@@ -2,7 +2,7 @@
 
 .form-group
   %label{for: "location"} Location
-  %input.form-control{location: "location", "ng-model" => "formData.location", type: "text"}
+  %input{location: "location", "ng-model" => "formData.location", type: "text"}
 
 .form-group
   %a.btn{"ui-sref" => "questionnaire.relationship"}
