refactorisation: use of Questionnaire model for form parameters validation with ActiveModel::Validations update angular controller: encapsulate form parameters in questionnaire entry, display validation error messages

--- a/app/assets/stylesheets/questionnaire.css
+++ b/app/assets/stylesheets/questionnaire.css
@@ -26,7 +26,8 @@ body                            { padding-top:20px; }
 ============================================================================= */
 #signup-form            { position:relative; min-height:300px; overflow:hidden; padding:30px; }
 #form-views             { width:auto;}
-#questionnaire-form     { height: 50px; padding: 20px; }
+#questionnaire-form     { padding: 20px; }
+.form-view-container    { height: 50px; }
 
 /* basic styling for entering and leaving */
 /* left and right added to ensure full width */
