--- a/app/views/questionnaire/poem.html.haml
+++ b/app/views/questionnaire/poem.html.haml
@@ -1,4 +1,8 @@
 / questionnaire/poem.html.haml
 
 .poem
-  Wesh this is my poem!
+  = @receiver_name
+  = @location
+  = @relationship
+  = @trait
+  = @message
