--- a/app/views/questionnaire/relationship.html.haml
+++ b/app/views/questionnaire/relationship.html.haml
@@ -3,7 +3,7 @@
 .form-group
   %label{for: "relationship"} Relationship
   %div{"ng-controller" => "RelationshipsTypeaheadCtrl"}
-    %input{relationship: "relationship", "ng-model" => "formData.relationship", type: "text", "typeahead" => "suggestion for suggestion in relationships($viewValue)", autocomplete: "off"}
+    %input{relationship: "relationship", "ng-model" => "formData.relationship", type: "text", "required" => "", name: "relationship", "typeahead" => "suggestion for suggestion in relationships($viewValue)", "typeahead-editable" => false, autocomplete: "off"}
 
 .form-group
   %a.btn{"ui-sref" => "questionnaire.trait"}
