--- a/app/views/questionnaire/message.html.haml
+++ b/app/views/questionnaire/message.html.haml
@@ -3,9 +3,4 @@
 .form-group
   %label{for: "message"} Message
   %div{"ng-controller" => "MessagesTypeaheadCtrl"}
-    %input{message: "message", "ng-model" => "formData.message", type: "text", "typeahead" => "suggestion for suggestion in messages($viewValue)", autocomplete: "off"}
-
-%button.btn{type: "submit"} Submit
-/.form-group
-/  %a.btn{"ui-sref" => "poem"}
-/    Write Poem
+    %input{message: "message", "ng-model" => "formData.message", type: "text", "required" => "", name: "message", "typeahead" => "suggestion for suggestion in messages($viewValue)", "typeahead-editable" => false, autocomplete: "off"}
