modify relationship, trait and message form inputs: can only select value from typeahead options

--- a/app/views/questionnaire/message.html.haml
+++ b/app/views/questionnaire/message.html.haml
@@ -3,4 +3,4 @@
 .form-group
   %label{for: "message"} Message
   %div{"ng-controller" => "MessagesTypeaheadCtrl"}
-    %input{message: "message", "ng-model" => "formData.message", type: "text", "required" => "", name: "message", "typeahead" => "suggestion for suggestion in messages($viewValue)", "typeahead-editable" => false, autocomplete: "off"}
+    %input{message: "message", "ng-model" => "formData.message", type: "text", "required" => "", name: "message", "typeahead" => "suggestion for suggestion in messages($viewValue)", "typeahead-editable" => "false", autocomplete: "off"}
