save questionnary in session after posting form retrieve questionnary from session when requesting poem page instanciate a poem containing a questionnary when entering poem controller method update questionnary and poem models update factories to match models

--- a/app/views/questionnaire/poem.html.haml
+++ b/app/views/questionnaire/poem.html.haml
@@ -1,8 +1,4 @@
 / questionnaire/poem.html.haml
 
 .poem
-  = @receiver_name
-  = @location
-  = @relationship
-  = @trait
-  = @message
+  = debug(@poem)
