--- a/app/views/questionnaire/message.html.haml
+++ b/app/views/questionnaire/message.html.haml
@@ -1,6 +1,5 @@
 / questionnaire/message.html.haml
 
-.form-group
+.form-group{"ng-controller" => "MessagesTypeaheadCtrl"}
   %label{for: "message"} Message
-  %div{"ng-controller" => "MessagesTypeaheadCtrl"}
-    %input{message: "message", "ng-model" => "formData.message", type: "text", "required" => "", name: "message", "typeahead" => "suggestion for suggestion in messages($viewValue)", "typeahead-editable" => "false", autocomplete: "off"}
+  %input{message: "message", "ng-model" => "formData.message", type: "text", "required" => "", name: "message", "typeahead" => "suggestion for suggestion in messages($viewValue)", "typeahead-editable" => "false", autocomplete: "off"}
