--- a/app/views/questionnaire/receiver_name.html.haml
+++ b/app/views/questionnaire/receiver_name.html.haml
@@ -1,8 +1,12 @@
 / questionnaire/receiver_name.html.haml
 
 .form-group
-  %label{for: "receiver_name"} Receiver Name
+  %label{for: "receiver_name"} Receiver Name:
   %input{receiver_name: "receiver_name", "ng-model" => "formData.receiver_name", type: "text", "required" => "", name: "receiver_name"}
+.form-group
+  %label{for: "receiver_sex"} Receiver Sex:
+  %input{receiver_sex: "receiver_sex", "ng-model" => "formData.receiver_sex", type: "radio", "required" => "", name: "receiver_sex", value: "male"}Male
+  %input{receiver_sex: "receiver_sex", "ng-model" => "formData.receiver_sex", type: "radio", "required" => "", name: "receiver_sex", value: "female"}Female
 
 .form-group
   %a.btn{"ui-sref" => "questionnaire.location"}
