--- a/app/views/questionnaire/trait.html.haml
+++ b/app/views/questionnaire/trait.html.haml
@@ -1,9 +1,8 @@
 / questionnaire/trait.html.haml
 
-.form-group
-  %label{for: "trait"} Trait
-  %div{"ng-controller" => "TraitsTypeaheadCtrl"}
-    %input{trait: "trait", "ng-model" => "formData.trait", type: "text", "required" => "", name: "trait", "typeahead" => "suggestion for suggestion in traits($viewValue)", "typeahead-editable" => "false", autocomplete: "off"}
+.form-group{"ng-controller" => "TraitsTypeaheadCtrl"}
+  %label{for: "trait"} Trait:
+  %input{trait: "trait", "ng-model" => "formData.trait", type: "text", "required" => "", name: "trait", "typeahead" => "suggestion for suggestion in traits($viewValue)", "typeahead-editable" => "false", autocomplete: "off"}
 
 .form-group
   %a.btn{"ui-sref" => "questionnaire.message"}
