--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,14 @@
 %html
   %head
     %title Yourownpoet
+    %meta{"charset" => "utf-8"}
+    %meta{"http-equiv" => "X-UA-Compatible", "content" => "IE=edge"}
+    %meta{"name" => "viewport", "content" => "width=device-width", "initial-scale" => "1"}
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
-    = csrf_meta_tags
     %body{"ng-app" => "questionnaireApp"}
       = yield
+
+    %footer.small
+      %p The Poet is a small experiment with Rails and Angular
+      %p Built by Francois Koessler
