--- a/app/views/questionnaire/poem.html.haml
+++ b/app/views/questionnaire/poem.html.haml
@@ -20,3 +20,6 @@
     %div=@poem[:message_verse][:line_three]
     %div=@poem[:message_verse][:line_four]
     %div=@poem[:message_verse][:line_five]
+
+%div.text-center
+  %a.btn.btn-warning{"ui-sref" => "questionnaire.receiver_name"} Restart
