--- a/app/views/questionnaire/poem.html.haml
+++ b/app/views/questionnaire/poem.html.haml
@@ -22,4 +22,4 @@
     %div=@poem[:message_verse][:line_five]
 
 %div.text-center
-  %a.btn.btn-warning{"ui-sref" => "questionnaire.receiver_name"} Restart
+  %a.btn.btn-warning{"ui-sref" => "questionnaire.receiver_name"} Write Another Poem
