--- a/app/assets/stylesheets/questionnaire.css
+++ b/app/assets/stylesheets/questionnaire.css
@@ -14,7 +14,7 @@ body { padding-top: 20px; }
 #status-buttons a:hover         { text-decoration:none; }
 
 /* we will style the span as the circled number */
-#status-buttons span            { background:#333; display:block; height:30px; margin:0 auto 10px; padding-top:5px; width:30px; 
+#status-buttons span            { background:#333; display:block; height:30px; margin:0 auto 10px; padding-top:5px; width:30px;
     border-radius:50%; }
 
 /* active buttons turn light green-blue*/
@@ -38,21 +38,21 @@ ul.dropdown-menu > li > a { cursor: pointer; }
 /* left and right added to ensure full width */
 #form-views.ng-enter,
 #form-views.ng-leave      { position:absolute; left:30px; right:30px;
-    transition:0.5s all ease; -moz-transition:0.5s all ease; -webkit-transition:0.5s all ease; 
+    transition:0.5s all ease; -moz-transition:0.5s all ease; -webkit-transition:0.5s all ease;
 }
-    
+
 /* enter animation */
-#form-views.ng-enter            { 
+#form-views.ng-enter            {
     -webkit-animation:slideInRight 0.5s both ease;
   -moz-animation:slideInRight 0.5s both ease;
-  animation:slideInRight 0.5s both ease; 
+  animation:slideInRight 0.5s both ease;
 }
 
 /* leave animation */
-#form-views.ng-leave            { 
+#form-views.ng-leave            {
     -webkit-animation:slideOutLeft 0.5s both ease;
   -moz-animation:slideOutLeft 0.5s both ease;
-  animation:slideOutLeft 0.5s both ease;   
+  animation:slideOutLeft 0.5s both ease;
 }
 
 /* ANIMATIONS
@@ -61,7 +61,7 @@ ul.dropdown-menu > li > a { cursor: pointer; }
 @keyframes slideOutLeft {
   to    { transform: translateX(-200%); }
 }
-@-moz-keyframes slideOutLeft {  
+@-moz-keyframes slideOutLeft {
   to    { -moz-transform: translateX(-200%); }
 }
 @-webkit-keyframes slideOutLeft {
@@ -83,4 +83,4 @@ ul.dropdown-menu > li > a { cursor: pointer; }
 }
 
 .poem { text-align: center; margin: 50px auto; }
-footer { position: absolute; width: 500px; bottom: 0px; left: 50%; margin: 15px -250px; text-align: center; }
+footer { margin: 35px; text-align: center; }
