--- a/app/views/questionnaire/poem.html.haml
+++ b/app/views/questionnaire/poem.html.haml
@@ -1,25 +1,20 @@
-/ questionnaire/poem.html.haml
-
 .poem
-  %p=@poem[:title]
+  %p {{ poem.title }}
   %p
-    %div=@poem[:intro_verse][:line_one]
-    %div=@poem[:intro_verse][:line_two]
-    %div=@poem[:intro_verse][:line_three]
-    %div=@poem[:intro_verse][:line_four]
-    %div=@poem[:intro_verse][:line_five]
+    %div {{poem.intro_verse.line_one}}
+    %div {{poem.intro_verse.line_two}}
+    %div {{poem.intro_verse.line_three}}
+    %div {{poem.intro_verse.line_four}}
+    %div {{poem.intro_verse.line_five}}
   %p
-    %div=@poem[:trait_verse][:line_one]
-    %div=@poem[:trait_verse][:line_two]
-    %div=@poem[:trait_verse][:line_three]
-    %div=@poem[:trait_verse][:line_four]
-    %div=@poem[:trait_verse][:line_five]
+    %div {{poem.trait_verse.line_one}}
+    %div {{poem.trait_verse.line_two}}
+    %div {{poem.trait_verse.line_three}}
+    %div {{poem.trait_verse.line_four}}
+    %div {{poem.trait_verse.line_five}}
   %p
-    %div=@poem[:message_verse][:line_one]
-    %div=@poem[:message_verse][:line_two]
-    %div=@poem[:message_verse][:line_three]
-    %div=@poem[:message_verse][:line_four]
-    %div=@poem[:message_verse][:line_five]
-
-%div.text-center
-  %a.btn.btn-warning{"ui-sref" => "questionnaire.receiver_name"} Write Another Poem
+    %div {{poem.message_verse.line_one}}
+    %div {{poem.message_verse.line_two}}
+    %div {{poem.message_verse.line_three}}
+    %div {{poem.message_verse.line_four}}
+    %div {{poem.message_verse.line_five}}
